Fixes logo distortion

--- a/css/legend.css
+++ b/css/legend.css
@@ -17,6 +17,7 @@ body {
   margin:-10px 0 0 -82px;
   padding:0 15px 0 0;
   border:0;
+  box-sizing: border-box;
 }
 #head h1 {
   color:#000;
